fix breakpoints, overflow, scrollbar

--- a/src/input.css
+++ b/src/input.css
@@ -2,7 +2,34 @@
 @tailwind components;
 @tailwind utilities;
 
+.title-wrapper {
+  transform-style: preserve-3d;
+  transform: perspective(1000px);
+}
+
+.translateZ1 {
+  transform-style: preserve-3d;
+  transform: translateZ(20px);
+}
+
+.translateZ2 {
+  transform: translateZ(100px);
+}
+
 .item {
   background-image: -o-linear-gradient(290deg, white 5%, rgba(0, 0, 0, 0) 50%);
   background-image: linear-gradient(160deg, white 5%, rgba(0, 0, 0, 0) 50%);
+}
+
+html {
+  overflow: scroll;
+  overflow-x: hidden;
+}
+::-webkit-scrollbar {
+  width: 0; /* Remove scrollbar space */
+  background: transparent; /* Optional: just make scrollbar invisible */
+}
+/* Optional: show position indicator in red */
+::-webkit-scrollbar-thumb {
+  background: #ff0000;
 }
